

not yet  BJH  Release 10.89.00

              pnmpad: Add -reportonly.

              anytopnm: Fix unpredictable behavior when file name contains
              spaces.

              pamfind: Fix typo in message.

              pnmquant: Fail if user specifies both -spreadbrightness and
              -spreadluminosity or both -randomseed and -norandom, rather
              than just pick one.

19.09.28 BJH  Release 10.88.00

              pnmquant: Fail if user specifies more than one of -meanpixel,
              -meancolor, and -center, rather than just pick one.

              pnmremap: Don't output any part of the image if program fails
              because the maxval of input and map file do not match, in a
              case where matching maxval is required, i.e. the user specified
              -firstisdefault or -missingcolor.

              ppmhist: sort secondarily by RGB with -sort=frequency, so
              output is repeatable.

              pnmcolormap: Add -splitpix, -splitcol, -splitdim.
              Thanks Vladislav Zavjalov.

              pbmtext: fix erroneous failure message with long input text.

              jpeg2ktopam, pamtojpeg2k: fix negative array index.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              jpeg2ktopam, pamtojpeg2k: fix assertion failure.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              jpeg2ktopam: Fix memory leak after decoder failure.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              jpeg2ktopam: fix null pointer dereference.  Always broken
              (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              pnmtorle, rletopnm: fix wild pointer dereference when memory
              allocation fails.  Always broken (programs were added to
              Netpbm in Release 9.0 (April 2000).
